<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="add_media"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_add_short"
        android:shortcutLongLabel="@string/shortcut_add_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.app.shouze"
            android:targetClass="com.app.shouze.MainActivity">
            <extra android:name="shortcut_action" android:value="add" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="search_anilist"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.app.shouze"
            android:targetClass="com.app.shouze.MainActivity">
            <extra android:name="shortcut_action" android:value="search" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="view_statistics"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_stats_short"
        android:shortcutLongLabel="@string/shortcut_stats_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.app.shouze"
            android:targetClass="com.app.shouze.MainActivity">
            <extra android:name="shortcut_action" android:value="statistics" />
        </intent>
    </shortcut>
</shortcuts>
